syntax = "proto3";

package main;

option go_package = "./proto";

// 添加秒杀预约
message AddSeckillReservationReq {
  int64 id = 1; //ID
  int64 user_id = 2; //用户ID
  int64 activity_id = 3; //活动ID
  int64 product_id = 4; //秒杀商品ID
  int32 status = 5; //状态：0-已预约，1-已参与，2-已取消
}

message AddSeckillReservationResp {
  string pong = 1;
}

// 删除秒杀预约
message DeleteSeckillReservationReq {
  repeated int64 ids = 1;
}

message DeleteSeckillReservationResp {
  string pong = 1;
}

// 更新秒杀预约
message UpdateSeckillReservationReq {
  int64 id = 1; //ID
  int64 user_id = 2; //用户ID
  int64 activity_id = 3; //活动ID
  int64 product_id = 4; //秒杀商品ID
  int32 status = 5; //状态：0-已预约，1-已参与，2-已取消
}

message UpdateSeckillReservationResp {
  string pong = 1;
}

// 更新秒杀预约状态
message UpdateSeckillReservationStatusReq {
  repeated int64 ids = 1; //ID
  int32 status = 5; //状态：0-已预约，1-已参与，2-已取消
}

message UpdateSeckillReservationStatusResp {
  string pong = 1;
}

// 查询秒杀预约详情
message QuerySeckillReservationDetailReq {
    int64 id = 1;
}

message QuerySeckillReservationDetailResp {
  int64 id = 1; //ID
  int64 user_id = 2; //用户ID
  int64 activity_id = 3; //活动ID
  int64 product_id = 4; //秒杀商品ID
  int32 status = 5; //状态：0-已预约，1-已参与，2-已取消
  string create_time = 6; //
  string update_time = 7; //

}

// 分页查询秒杀预约列表
message QuerySeckillReservationListReq {
  int64 user_id = 1; //用户ID
  int64 activity_id = 2; //活动ID
  int64 product_id = 3; //秒杀商品ID
  int32 status = 4; //状态：0-已预约，1-已参与，2-已取消
  int32 page_num = 5; //第几页
  int32 page_size = 7; //每页的数量
}

message SeckillReservationListData {
  int64 id = 1; //ID
  int64 user_id = 2; //用户ID
  int64 activity_id = 3; //活动ID
  int64 product_id = 4; //秒杀商品ID
  int32 status = 5; //状态：0-已预约，1-已参与，2-已取消
  string create_time = 6; //
  string update_time = 7; //

}

message QuerySeckillReservationListResp {
  int64 total = 1;
  repeated  SeckillReservationListData list = 2;
}

// 秒杀预约
service SeckillReservationService {
  // 添加秒杀预约
  rpc AddSeckillReservation(AddSeckillReservationReq) returns (AddSeckillReservationResp){}
  // 删除秒杀预约
  rpc DeleteSeckillReservation(DeleteSeckillReservationReq) returns (DeleteSeckillReservationResp){}
  // 更新秒杀预约
  rpc UpdateSeckillReservation(UpdateSeckillReservationReq) returns (UpdateSeckillReservationResp ){}
  // 更新秒杀预约状态
  rpc UpdateSeckillReservationStatus(UpdateSeckillReservationStatusReq) returns (UpdateSeckillReservationStatusResp ){}
  // 查询秒杀预约详情
   rpc QuerySeckillReservationDetail(QuerySeckillReservationDetailReq) returns (QuerySeckillReservationDetailResp){}
  // 查询秒杀预约列表
  rpc QuerySeckillReservationList(QuerySeckillReservationListReq) returns (QuerySeckillReservationListResp){}


}
